--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "@angular/core": "~13.1.0",
     "@angular/fire": "^7.2.0",
     "@angular/forms": "~13.1.0",
+    "@angular/localize": "~13.1.0",
     "@angular/material": "^13.1.3",
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^11.0.0",
+    "bootstrap": "^5.1.3",
     "firebase": "^9.6.4",
+    "jquery": "^3.6.0",
     "rxfire": "^6.0.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
@@ -33,12 +37,16 @@
     "@angular/compiler-cli": "~13.1.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "autoprefixer": "^10.4.2",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "postcss": "^8.4.5",
+    "schematics-scss-migrate": "^1.3.14",
+    "tailwindcss": "^3.0.16",
     "typescript": "~4.5.2"
   }
 }
