--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.4",
     "jquery": "^3.6.0",
+    "ngx-page-scroll-core": "^8.0.0",
     "rxfire": "^6.0.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
@@ -36,6 +37,7 @@
     "@angular/cli": "~13.1.2",
     "@angular/compiler-cli": "~13.1.0",
     "@types/jasmine": "~3.10.0",
+    "@types/jquery": "^3.5.13",
     "@types/node": "^12.11.1",
     "autoprefixer": "^10.4.2",
     "jasmine-core": "~3.10.0",
