--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@fortawesome/angular-fontawesome": "^0.10.1",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@ng-bootstrap/ng-bootstrap": "^11.0.0",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.4",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "ngx-page-scroll-core": "^8.0.0",
     "rxfire": "^6.0.0",
