--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "ngx-page-scroll-core": "^8.0.0",
+    "primeicons": "^5.0.0",
+    "primeng": "^13.1.0",
     "rxfire": "^6.0.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
