--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "firebase": "^9.6.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
+    "mdb-ui-kit": "^3.10.2",
     "ngx-page-scroll-core": "^8.0.0",
     "primeicons": "^5.0.0",
     "primeng": "^13.1.0",
