--- a/angular.json
+++ b/angular.json
@@ -28,9 +28,8 @@
               "./node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.scss",
               "node_modules/@fortawesome/fontawesome-free/css/all.css",
-              "node_modules/primeicons/primeicons.css",
-              "node_modules/primeng/resources/themes/lara-light-indigo/theme.css",
-              "node_modules/primeng/resources/primeng.min.css"
+              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
+              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css"
             ],
             "inlineStyleLanguage": "scss",
             "scripts": []
