--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "mdb-ui-kit": "^3.10.2",
+    "ngx-countdown": "^13.0.0",
+    "ngx-owl-carousel-o": "^7.0.1",
     "ngx-page-scroll-core": "^8.0.0",
     "primeicons": "^5.0.0",
     "primeng": "^13.1.0",
