--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@ng-bootstrap/ng-bootstrap": "^11.0.0",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.4",
     "font-awesome": "^4.7.0",
