--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.1.0",
-    "@angular/cdk": "^13.1.3",
+    "@angular/cdk": "^13.2.2",
     "@angular/common": "~13.1.0",
     "@angular/compiler": "~13.1.0",
     "@angular/core": "~13.1.0",
@@ -27,12 +27,17 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@ng-bootstrap/ng-bootstrap": "^11.0.0",
+    "@types/chart.js": "^2.9.35",
+    "angular-bootstrap-md": "^12.2.0",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.1.3",
+    "chart.js": "^2.5.0",
     "firebase": "^9.6.4",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.6.0",
     "mdb-ui-kit": "^3.10.2",
+    "ngx-bootstrap": "^8.0.0",
     "ngx-countdown": "^13.0.0",
     "ngx-owl-carousel-o": "^7.0.1",
     "ngx-page-scroll-core": "^8.0.0",
